--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>uk.gov.companieshouse</groupId>
         <artifactId>companies-house-parent</artifactId>
-        <version>2.1.11</version>
+        <version>2.1.12</version>
         <relativePath/>
     </parent>
     <artifactId>certificates.orders.api.ch.gov.uk</artifactId>
@@ -17,70 +17,67 @@
 
     <properties>
         <java.version>21</java.version>
-        <commons.lang.version>3.14.0</commons.lang.version>
-        <commons.beanutils.version>1.9.4</commons.beanutils.version>
-        <gson.version>2.10.1</gson.version>
-        <guava.version>33.1.0-jre</guava.version>
-        <org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
+        <commons-lang3.version>3.17.0</commons-lang3.version>
+        <commons-beanutils.version>1.11.0</commons-beanutils.version>
+        <gson.version>2.13.1</gson.version>
+        <guava.version>33.4.8-jre</guava.version>
+        <mapstruct.version>1.6.3</mapstruct.version>
         <jakarta.json-api.version>2.1.3</jakarta.json-api.version>
-        <johnzon.version>2.0.1</johnzon.version>
-        <jakarta.json.version>1.1.5</jakarta.json.version>
-        <jackson.version>2.17.0</jackson.version>
-        <snakeyaml.version>2.2</snakeyaml.version>
+        <johnzon-core.version>2.0.2</johnzon-core.version>
+        <jakarta.json.version>1.1.7</jakarta.json.version>
+        <jackson.version>2.19.0</jackson.version>
+        <opentelemetry-instrumentation-bom.version>2.16.0</opentelemetry-instrumentation-bom.version>
+        <snakeyaml.version>2.4</snakeyaml.version>
+        <tomcat-embed.version>11.0.8</tomcat-embed.version>
 
         <!--CH Libraries-->
-        <structured-logging.version>3.0.7</structured-logging.version>
+        <structured-logging.version>3.0.32</structured-logging.version>
         <api-helper-java.version>3.0.1</api-helper-java.version>
-        <api-sdk-manager-java-library.version>3.0.5</api-sdk-manager-java-library.version>
-        <api-sdk-java.version>6.0.17</api-sdk-java.version>
-        <api-security-java.version>2.0.4</api-security-java.version>
-        <private-api-sdk-java.version>4.0.114</private-api-sdk-java.version>
+        <api-sdk-manager-java-library.version>3.0.7</api-sdk-manager-java-library.version>
+        <api-sdk-java.version>6.3.0</api-sdk-java.version>
+        <api-security-java.version>2.0.8</api-security-java.version>
+        <private-api-sdk-java.version>4.0.312</private-api-sdk-java.version>
 
         <start-class>uk.gov.companieshouse.certificates.orders.api.CertificatesApiApplication</start-class>
 
         <!-- Test -->
-        <junit-platform-launcher.version>1.10.2</junit-platform-launcher.version>
-        <junit-platform-commons.version>1.10.2</junit-platform-commons.version>
-        <junit-jupiter.version>5.10.2</junit-jupiter.version>
-        <mockito-junit-jupiter-version>5.11.0</mockito-junit-jupiter-version>
-        <hamcrest-version>2.2</hamcrest-version>
-        <spring-cloud-contract-wiremock-version>4.1.2</spring-cloud-contract-wiremock-version>
-        <powermock.version>2.0.9</powermock.version>
-        <commons.io.version>2.16.1</commons.io.version>
-        <flapdoodle-embed-mongo.version>4.13.0</flapdoodle-embed-mongo.version>
-        <system-stubs-core.version>2.1.6</system-stubs-core.version>
-        <test-containers.version>1.19.7</test-containers.version>
+        <mockito-junit-jupiter.version>5.18.0</mockito-junit-jupiter.version>
+        <hamcrest.version>3.0</hamcrest.version>
+        <spring-cloud-contract-wiremock.version>4.3.0</spring-cloud-contract-wiremock.version>
+        <powermock-api-mockito2.version>2.0.9</powermock-api-mockito2.version>
+        <commons-io.version>2.19.0</commons-io.version>
+        <system-stubs-core.version>2.1.8</system-stubs-core.version>
+        <testcontainers-bom.version>1.21.1</testcontainers-bom.version>
 
         <!-- Docker -->
-        <jib-maven-plugin.version>3.4.2</jib-maven-plugin.version>
+        <jib-maven-plugin.version>3.4.5</jib-maven-plugin.version>
 
         <!-- Spring -->
-        <spring-boot-dependencies.version>3.3.2</spring-boot-dependencies.version>
-        <spring-web.version>6.1.12</spring-web.version>
-        <spring-boot-maven-plugin.version>3.2.5</spring-boot-maven-plugin.version>
-        <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
-        <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
+        <spring-boot-dependencies.version>3.5.0</spring-boot-dependencies.version>
+        <spring-boot-maven-plugin.version>3.5.0</spring-boot-maven-plugin.version>
+        <maven-surefire-plugin.version>3.5.3</maven-surefire-plugin.version>
+        <maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
 
-        <jacoco-maven-plugin.version>0.8.11</jacoco-maven-plugin.version>
+        <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
 
         <!-- sonar config -->
-		<sonar-maven-plugin.version>4.0.0.4121</sonar-maven-plugin.version>
-		<sonar.java.binaries>${project.basedir}/target</sonar.java.binaries>
-		<sonar.token>${CODE_ANALYSIS_TOKEN}</sonar.token>
-		<sonar.login></sonar.login>
-		<sonar.password></sonar.password>
-		<sonar.projectKey>uk.gov.companieshouse:certificates.orders.api.ch.gov.uk</sonar.projectKey>
-		<sonar.projectName>certificates.orders.api.ch.gov.uk</sonar.projectName>
-		<sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco/jacoco.xml,
-			${project.basedir}/target/site/jacoco-it/jacoco.xml
-		</sonar.coverage.jacoco.xmlReportPaths>
-		<sonar.jacoco.reports>${project.basedir}/target/site</sonar.jacoco.reports>
-		<sonar.dependencyCheck.htmlReportPath>
-			${project.basedir}/target/dependency-check-report.html
-		</sonar.dependencyCheck.htmlReportPath>
-		<sonar.java.binaries>
-			${project.basedir}/target
-		</sonar.java.binaries>
+        <sonar-maven-plugin.version>4.0.0.4121</sonar-maven-plugin.version>
+        <sonar.java.binaries>${project.basedir}/target</sonar.java.binaries>
+        <sonar.token>${CODE_ANALYSIS_TOKEN}</sonar.token>
+        <sonar.login></sonar.login>
+        <sonar.password></sonar.password>
+        <sonar.projectKey>uk.gov.companieshouse:certificates.orders.api.ch.gov.uk</sonar.projectKey>
+        <sonar.projectName>certificates.orders.api.ch.gov.uk</sonar.projectName>
+        <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco/jacoco.xml,
+          ${project.basedir}/target/site/jacoco-it/jacoco.xml
+        </sonar.coverage.jacoco.xmlReportPaths>
+        <sonar.jacoco.reports>${project.basedir}/target/site</sonar.jacoco.reports>
+        <sonar.dependencyCheck.htmlReportPath>
+          ${project.basedir}/target/dependency-check-report.html
+        </sonar.dependencyCheck.htmlReportPath>
+        <sonar.java.binaries>
+          ${project.basedir}/target
+        </sonar.java.binaries>
 
         <argLine>
             --add-opens java.base/java.util=ALL-UNNAMED
@@ -91,6 +88,13 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>io.opentelemetry.instrumentation</groupId>
+                <artifactId>opentelemetry-instrumentation-bom</artifactId>
+                <version>${opentelemetry-instrumentation-bom.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
                 <version>${spring-boot-dependencies.version}</version>
@@ -100,7 +104,7 @@
             <dependency>
                 <groupId>org.testcontainers</groupId>
                 <artifactId>testcontainers-bom</artifactId>
-                <version>${test-containers.version}</version>
+                <version>${testcontainers-bom.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -120,26 +124,52 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-        <dependency>
-<!--            Added to remove vulnerability in 6.1.5 / Remove once spring has updated-->
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
-            <version>${spring-web.version}</version>
-        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
+        <!-- overriding the spring-web version pulled in through spring boot.
+              version lower than 6.2.8 bring in CVE-2025-41234 -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>6.2.8</version>
+        </dependency>
+
+        <!-- overriding the tomcat-embed package versions pulled in through spring boot.
+              versions lower than 11.0.8 bring in CVE-2025-48988, CVE-2025-49125 -->
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-core</artifactId>
+            <version>${tomcat-embed.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-el</artifactId>
+            <version>${tomcat-embed.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-websocket</artifactId>
+            <version>${tomcat-embed.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.opentelemetry.instrumentation</groupId>
+            <artifactId>opentelemetry-spring-boot-starter</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>${commons.lang.version}</version>
+            <version>${commons-lang3.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-beanutils</groupId>
             <artifactId>commons-beanutils</artifactId>
-            <version>${commons.beanutils.version}</version>
+            <version>${commons-beanutils.version}</version>
             <exclusions>
                 <!--excluded to remove vulnerability-->
                 <exclusion>
@@ -151,7 +181,7 @@
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
-            <version>${org.mapstruct.version}</version>
+            <version>${mapstruct.version}</version>
         </dependency>
         <dependency>
             <groupId>jakarta.json</groupId>
@@ -171,7 +201,7 @@
         <dependency>
             <groupId>org.apache.johnzon</groupId>
             <artifactId>johnzon-core</artifactId>
-            <version>${johnzon.version}</version>
+            <version>${johnzon-core.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
@@ -243,31 +273,25 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-contract-wiremock</artifactId>
-            <version>${spring-cloud-contract-wiremock-version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.10.2</version>
+            <version>${spring-cloud-contract-wiremock.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
-            <version>${mockito-junit-jupiter-version}</version>
+            <version>${mockito-junit-jupiter.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest</artifactId>
-            <version>${hamcrest-version}</version>
+            <version>${hamcrest.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.powermock</groupId>
             <artifactId>powermock-api-mockito2</artifactId>
-            <version>${powermock.version}</version>
+            <version>${powermock-api-mockito2.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -285,7 +309,7 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>${commons.io.version}</version>
+            <version>${commons-io.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -365,7 +389,7 @@
                         <path>
                             <groupId>org.mapstruct</groupId>
                             <artifactId>mapstruct-processor</artifactId>
-                            <version>${org.mapstruct.version}</version>
+                            <version>${mapstruct.version}</version>
                         </path>
                         <!-- other annotation processors -->
                     </annotationProcessorPaths>
@@ -374,6 +398,7 @@
                     </compilerArgs>
                 </configuration>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
