--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <snakeyaml.version>2.4</snakeyaml.version>
         <commons-lang3.version>3.18.0</commons-lang3.version>
         <tomcat-embed-core.version>10.1.46</tomcat-embed-core.version>
+        <tomcat-embed-websocket.version>11.0.11</tomcat-embed-websocket.version>
         <opentelemetry-instrumentation-bom.version>2.16.0</opentelemetry-instrumentation-bom.version>
 
         <!--CH Libraries-->
@@ -340,6 +341,11 @@
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-core</artifactId>
             <version>${tomcat-embed-core.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-websocket</artifactId>
+            <version>${tomcat-embed-websocket.version}</version>
         </dependency>
     </dependencies>
 
